libview: Make sync-source signal introspectable

https://bugzilla.gnome.org/show_bug.cgi?id=694687